Написал основной функционал